[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdnl_wildcat"
version = "0.3"
authors = [
  { name="Noah Capp", email="noahmcapp@gmail.com" },
]
description = "PDNL WildCat Wrapper"
dependencies = [
    "torch",
    "torchvision",
    "tqdm",
    "pdnl_sana"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/PennCompPathology/pdnl_wildcat"

[project.scripts]
pdnl_wildcat = "pdnl_wildcat:main"